5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4427/executions/1582_1330.log
== TEST (2019-03-26 16:45:08) 
-- CODE:
var1 = 250
var2 = 6

divisao = var1 / var2

divisao = x

round(x,2)

print(divisao)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    divisao = x
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 16:45:26) 
-- CODE:
var1 = 250
var2 = 6

divisao = var1 / var2

round(x,2)

print(divisao)


-- EXECUTION TIME:
0.169308
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1582/1330/main.py", line 6, in <module>
    round(x,2)
NameError: name 'x' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:45:32) 
-- CODE:
var1 = 250
var2 = 6

divisao = var1 / var2

round(x,2)

print(divisao)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    round(x,2)
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:46:26) 
-- CODE:
var1 = 250
var2 = 6

d = var1 / var2

round(d,2)

print(d)


-- OUTPUT:
41.666666666666664
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 16:47:44) 
-- CODE:
var1 = 250
var2 = 6

d = var1 / var2

x = round(d,2)

print(x)


-- EXECUTION TIME:
0.133412
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.67
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 16:49:01) 
-- CODE:
var1 = 250
var2 = 6

d = var1 / var2

print(round(d,2))


-- EXECUTION TIME:
0.149182
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.67
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:49:06) 
-- CODE:
var1 = 250
var2 = 6

d = var1 / var2

print(round(d,2))


-- OUTPUT:
41.67
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
